2012-10-25  Jean-Louis Martineau <martineau@zmanda.com>
	* ndmp-src/ndmpconnobj.c: Use a GStaticMutex.

2012-10-24  Jean-Louis Martineau <martineau@zmanda.com>
	* installcheck/Amanda_Device.pl: Fix count.

2012-10-23  Jean-Louis Martineau <martineau@zmanda.com>
	* ndmp-src/ndmpconnobj.c: Use event_create and event_activate.
	  Create static notify_data_t.

2012-10-23  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/event.c (event_create, event_activate): New function, it
	  split event_register in two.
	* common-src/event.h (event_create, event_activate): New prototype.

2012-10-22  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/device.c (device_accept, device_connect,
	  device_write_from_connection, device_read_to_connection): They take
	  (int *, GMutex *, GCond  *) new arguments to be able to interupt
	  them.
	* device-src/device.h: Change prototype.
	* device-src/ndmp-device.c: Implement new functionnality.
	* device-src/xfer-dest-taper-directtcp.c,
	  device-src/xfer-source-recovery.c: Use the new API.
	* installcheck/Amanda_Device.pl: Remove directtcp test.
	* ndmp-src/ndmpconnobj.c (ndmp_connection_wait_for_notify_with_cond):
	  Allow to be cancelled.
	* ndmp-src/ndmpconnobj.h: Change prototype.
	* perl/Amanda/Device.swg: Remove accept, connect,
	  write_from_connection and read-to_connection.

2012-10-22  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Taper/Scribe.pm (abort_setup): New method.
	* perl/Amanda/Taper/Scribe.pm (_dump_done): Return if $dump_cb is not
	  set.
	* perl/Amanda/Taper/Worker.pm: Call abort_setup if setup failed.

2012-10-22  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amfetchdump.pl: typo, remove '.' in argv.

2012-10-22  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/dumper.c (do_dump): Make the header file only
	  HEADER_DONE.

2012-10-22  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Taper/Controller.pm: Reverse taper/driver in log.
