@@ -76,7 +76,7 @@ struct event_handle {
  * events and for deleting dead events */
 GSList *all_events = NULL;
 
-GMutex *event_mutex = NULL;
+GStaticMutex event_mutex = G_STATIC_MUTEX_INIT;
 
 /*
  * Utility functions
@@ -121,7 +121,7 @@ event_register(
     void *arg)
 {
     event_handle_t *handle;
-    
+
     handle = event_create(data, type, fn, arg);
     event_activate(handle);
     return handle;
@@ -136,11 +136,7 @@ event_create(
 {
     event_handle_t *handle;
 
-    if (!event_mutex) {
-	glib_init();
-	event_mutex = g_mutex_new();
-    }
-    g_mutex_lock(event_mutex);
+    g_static_mutex_lock(&event_mutex);
 
     /* sanity-checking */
     if ((type == EV_READFD) || (type == EV_WRITEFD)) {
@@ -165,7 +161,7 @@ event_create(
     event_debug(1, _("event: register: %p->data=%jd, type=%s\n"),
 		    handle, handle->data, event_type2str(handle->type));
 
-    g_mutex_unlock(event_mutex);
+    g_static_mutex_unlock(&event_mutex);
     return handle;
 }
 
@@ -176,7 +172,7 @@ event_activate(
     GIOCondition cond;
     assert(handle != NULL);
 
-    g_mutex_lock(event_mutex);
+    g_static_mutex_lock(&event_mutex);
 
     /* add to the list of events */
     all_events = g_slist_prepend(all_events, (gpointer)handle);
@@ -227,7 +223,7 @@ event_activate(
 	    error(_("Unknown event type %s"), event_type2str(handle->type));
     }
 
-    g_mutex_unlock(event_mutex);
+    g_static_mutex_unlock(&event_mutex);
     return;
 }
 
@@ -243,7 +239,7 @@ event_release(
 {
     assert(handle != NULL);
 
-    g_mutex_lock(event_mutex);
+    g_static_mutex_lock(&event_mutex);
     event_debug(1, _("event: release (mark): %p data=%jd, type=%s\n"),
 		    handle, handle->data,
 		    event_type2str(handle->type));
@@ -251,7 +247,7 @@ event_release(
 
     /* Mark it as dead and leave it for the event_loop to remove */
     handle->is_dead = TRUE;
-    g_mutex_unlock(event_mutex);
+    g_static_mutex_unlock(&event_mutex);
 }
 
 /*
@@ -265,7 +261,7 @@ event_wakeup(
     GSList *tofire = NULL;
     int nwaken = 0;
 
-    g_mutex_lock(event_mutex);
+    g_static_mutex_lock(&event_mutex);
     event_debug(1, _("event: wakeup: enter (%jd)\n"), id);
 
     /* search for any and all matching events, and record them.  This way
@@ -284,9 +280,9 @@ event_wakeup(
 	if (eh->type == EV_WAIT && eh->data == id && !eh->is_dead) {
 	    event_debug(1, _("A: event: wakeup triggering: %p id=%jd\n"), eh, id);
 	    /* The lcok must be release before running the event */
-	    g_mutex_unlock(event_mutex);
+	    g_static_mutex_unlock(&event_mutex);
 	    fire(eh);
-	    g_mutex_lock(event_mutex);
+	    g_static_mutex_lock(&event_mutex);
 	    nwaken++;
 	}
     }
@@ -294,7 +290,7 @@ event_wakeup(
     /* and free the temporary list */
     g_slist_free(tofire);
 
-    g_mutex_unlock(event_mutex);
+    g_static_mutex_unlock(&event_mutex);
     return (nwaken);
 }
 
@@ -369,11 +365,7 @@ event_loop_wait(
     event_handle_t *wait_eh,
     int nonblock)
 {
-    if (!event_mutex) {
-	glib_init();
-	event_mutex = g_mutex_new();
-    }
-    g_mutex_lock(event_mutex);
+    g_static_mutex_lock(&event_mutex);
     event_debug(1, _("event: loop: enter: nonblockg=%d, eh=%p\n"), nonblock, wait_eh);
 
     /* If we're waiting for a specific event, then reset its has_fired flag */
@@ -394,9 +386,9 @@ event_loop_wait(
 
 	/* Do an iteration */
 	/* Relese the lock before running an iteration */
-	g_mutex_unlock(event_mutex);
+	g_static_mutex_unlock(&event_mutex);
 	g_main_context_iteration(NULL, !nonblock);
-	g_mutex_lock(event_mutex);
+	g_static_mutex_lock(&event_mutex);
 
 	/* If the event we've been waiting for has fired or been released, as
 	 * appropriate, we're done.  See the comments for event_wait in event.h
@@ -414,7 +406,7 @@ event_loop_wait(
      * has been released. */
     flush_dead_events(NULL);
 
-    g_mutex_unlock(event_mutex);
+    g_static_mutex_unlock(&event_mutex);
 }
 
 GMainLoop *
